--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -32,7 +32,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="50"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Margin="10, 10, 0, 10" VerticalAlignment="Center">Address:</TextBlock>
+                    <TextBlock Grid.Column="0" Margin="10, 10, 0, 10" VerticalAlignment="Center">Path:</TextBlock>
                     <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="10"></TextBox>
                     <Button Grid.Column="2" Content="Go" Margin="0, 10, 10, 10"/>
                 </Grid>
