--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -16,7 +16,7 @@
         </Menu>
         <Grid Background="LightGray">
             <Grid.RowDefinitions>
-                <RowDefinition Height="40"/>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -30,11 +30,16 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="60"/>
                         <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0" Margin="10, 10, 0, 10" VerticalAlignment="Center">Path:</TextBlock>
-                    <TextBox Grid.Column="1" HorizontalAlignment="Stretch" Margin="10"></TextBox>
-                    <Button Grid.Column="2" Content="Go" Margin="0, 10, 10, 10"/>
+                    <TextBox Name="txtPath" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10"
+                             Text="{Binding Path=DirectoryPath, Mode=OneWay}"/>
+                    <StackPanel Orientation="Horizontal" Grid.Column="2">
+                        <Button Name="btnGo" Content="Go" Margin="0, 10, 10, 10" Padding="5" Click="btnGo_Click"/>
+                        <Button Name="btnUp" Content="Up" Margin="0, 10, 10, 10" Padding="5" Click="btnUp_Click"/>
+                    </StackPanel>
+                    
                 </Grid>
             </Border>
             <Grid Grid.Row="1">
@@ -48,12 +53,20 @@
                 </Grid.ColumnDefinitions>
                 <TreeView Grid.Column="0"/>
                 <GridSplitter Grid.Column="1" Width="10" HorizontalAlignment="Stretch" ResizeBehavior="PreviousAndNext" ResizeDirection="Columns"/>
-                <DataGrid Grid.Column="2">
+                <DataGrid Grid.Column="2" ItemsSource="{Binding FolderViewItems}" AutoGenerateColumns="False"
+                          Name="dgrdFolderView"
+                          GotFocus="dgrdFolderView_GotFocus">
+                    <DataGrid.Resources>
+                        <Style TargetType="DataGridRow">
+                            <EventSetter Event="MouseDoubleClick" Handler="dgrdFolderViewRow_MouseDoubleClick"/>
+                        </Style>
+                    </DataGrid.Resources>
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="File Name"/>
-                        <DataGridTextColumn Header="Created"/>
-                        <DataGridTextColumn Header="Modified"/>
-                        <DataGridTextColumn Header="Last Accessed"/>
+                        <DataGridTextColumn Header="Folder" Binding="{Binding IsFolder}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="File Name" Binding="{Binding FileName}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="Created" Binding="{Binding Created}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="Modified" Binding="{Binding Modified}" IsReadOnly="True"/>
+                        <DataGridTextColumn Header="Last Accessed" Binding="{Binding LastAccessed}" IsReadOnly="True"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
