--- a/WpfApp1/RenameFileDialog.xaml
+++ b/WpfApp1/RenameFileDialog.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel>
-            <TextBlock TextWrapping="Wrap">In order to rename the selected item, please enter the new name to give it."</TextBlock>
+            <TextBlock TextWrapping="Wrap">In order to rename the selected item, please enter the new name to give it.</TextBlock>
             <Grid Margin="0, 20, 0, 20">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
