--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -14,8 +14,8 @@
                 </Style>
             </Grid.Resources>
             <Grid.RowDefinitions>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
@@ -26,18 +26,27 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="60"/>
+                        <ColumnDefinition Width="Auto"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Margin="10, 10, 0, 10" VerticalAlignment="Center">Path:</TextBlock>
-                    <TextBox Name="txtPath" Grid.Column="1" HorizontalAlignment="Stretch" Margin="10"
-                             Text="{Binding Path=DirectoryPath, Mode=OneWay}"/>
-                    <StackPanel Orientation="Horizontal" Grid.Column="2">
-                        <Button Name="btnGo" Content="Go" Margin="0, 10, 10, 10" Padding="5" Click="btnGo_Click"/>
-                        <Button Name="btnUp" Content="Up" Margin="0, 10, 10, 10" Padding="5" Click="btnUp_Click"/>
+                    <StackPanel Orientation="Horizontal" Grid.Column="0">
+                        <!--<Button Name="btnGo" Content="Go" Margin="0, 10, 10, 10" Padding="5" Click="btnGo_Click"/>!-->
+                        <!--Todo: Replace button text with icons!-->
+                        <Button Name="btnUp" Content="/\" Margin="10, 10, 10, 10" Padding="5" Click="btnUp_Click"/>
+                        <Button Name="btnBack" Content="&lt;-" Margin="0, 10, 10, 10" Padding="5" Click="btnBack_Click"/>
+                        <Button Name="btnForward" Content="->" Margin="0, 10, 10, 10" Padding="5" Click="btnForward_Click"/>
                     </StackPanel>
-
+                    <!--<TextBlock Grid.Column="0" Margin="10, 10, 0, 10" VerticalAlignment="Center">Path:</TextBlock>!-->
+                    <Grid Grid.Column="1">
+                        <TextBox Name="txtPath" HorizontalAlignment="Stretch" Margin="10"
+                             Text="{Binding Path=DirectoryPath, Mode=OneWay}"
+                             LostFocus="txtPath_LostFocus"
+                             KeyDown="txtPath_KeyDown"/>
+                        <local:DirectoryPathBreadCrumb x:Name="dirPathBreadCrumb" Margin="10" 
+                                                       BreadCrumbPathSelected="DirectoryPathBreadCrumb_BreadCrumbPathSelected"
+                                                       MainPanelMouseDown="dirPathBreadCrumb_MainPanelMouseDown"/>
+                    </Grid>
                 </Grid>
             </Border>
             <Grid Grid.Row="1">
