--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -66,7 +66,7 @@
                               ResizeBehavior="PreviousAndNext" 
                               ResizeDirection="Columns"
                               Background="LightBlue"/>
-                <DataGrid Grid.Column="2" ItemsSource="{Binding FolderViewItems}" AutoGenerateColumns="False"
+                <DataGrid Grid.Column="2" DataContext="{Binding Folder}" ItemsSource="{Binding Items}" AutoGenerateColumns="False"
                           Name="dgrdFolderView"
                           GotFocus="dgrdFolderView_GotFocus"
                           GridLinesVisibility="None"
@@ -90,13 +90,13 @@
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
-                        <DataGridTextColumn Header="File Name" Binding="{Binding FileName}"
+                        <DataGridTextColumn Header="File Name" Binding="{Binding ItemName}"
                                             IsReadOnly="True" Width="150"/>
-                        <DataGridTextColumn Header="Date Modified" Binding="{Binding Modified}"
+                        <DataGridTextColumn Header="Date Modified" Binding="{Binding DateModified}"
                                             IsReadOnly="True" Width="150"/>
                         <DataGridTextColumn Header="Type" Binding="{Binding FileType}"
                                             IsReadOnly="True" Width="100"/>
-                        <DataGridTextColumn Header="Size" Binding="{Binding Size}" 
+                        <DataGridTextColumn Header="Size" Binding="{Binding SizeInBytes}" 
                                             IsReadOnly="True" Width="100"/>
                     </DataGrid.Columns>
                 </DataGrid>
