--- a/Noria/Noria.UI/RenameFileDialog.xaml
+++ b/Noria/Noria.UI/RenameFileDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="WpfApp1.RenameFileDialog"
+﻿<Window x:Class="Noria.UI.RenameFileDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:Noria"
         mc:Ignorable="d"
         Title="Rename Item" Height="250" Width="410" ResizeMode="NoResize" Background="LightBlue">
     <Grid Margin="20">
