--- a/Noria/Noria.UI/MainWindow.xaml
+++ b/Noria/Noria.UI/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:localUI="clr-namespace:Noria.UI"
         xmlns:localVM="clr-namespace:Noria.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="900" Background="LightBlue">
+        Title="Noria" Height="450" Width="900" Background="LightBlue">
     <Grid Background="LightBlue" HorizontalAlignment="Stretch" Margin="10" >
         <Grid.Resources>
             <Style TargetType="Button">
