--- a/Noria/Noria.UI/DirectoryPathBreadCrumb.xaml
+++ b/Noria/Noria.UI/DirectoryPathBreadCrumb.xaml
@@ -6,9 +6,11 @@
              xmlns:local="clr-namespace:Noria"
              mc:Ignorable="d" 
              d:DesignHeight="150" d:DesignWidth="800">
-    <Border BorderThickness="1" BorderBrush="Black">
-        <StackPanel Name="mainPanel" Background="LightBlue" Orientation="Horizontal"
-                    MouseDown="mainPanel_MouseDown">
+    <Border BorderThickness="1" BorderBrush="Silver">
+        <StackPanel Name="mainPanel" Orientation="Horizontal"
+                    MouseDown="mainPanel_MouseDown"
+                    HorizontalAlignment="Stretch"
+                    Background="LightBlue">
         </StackPanel>
     </Border>
 </UserControl>
