--- a/Noria/Noria.UI/RenameFileDialog.xaml
+++ b/Noria/Noria.UI/RenameFileDialog.xaml
@@ -5,42 +5,47 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Noria"
         mc:Ignorable="d"
-        Title="Rename Item" Height="250" Width="410" ResizeMode="NoResize" Background="LightBlue">
-    <Grid Margin="20">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="260"/>
-            <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <StackPanel>
-            <TextBlock TextWrapping="Wrap">In order to rename the selected item, please enter the new name to give it.</TextBlock>
-            <Grid Margin="0, 20, 0, 20">
-                <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="100"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Margin="10" Grid.Row="0" Grid.Column="0">Path:</TextBlock>
-                <TextBox Margin="10" Name="txtPath" Grid.Row="0" Grid.Column="1" IsReadOnly="True"
-                     Text="{Binding Path=ItemPath, Mode=TwoWay}" Background="LightBlue"/>
-                <TextBlock Margin="10" Grid.Row="1" Grid.Column="0">Old Name:</TextBlock>
-                <TextBox Margin="10" Name="txtOldName" Grid.Row="1" Grid.Column="1" IsReadOnly="True"
-                     Text="{Binding Path=ItemOldName, Mode=TwoWay}" Background="LightBlue"/>
-                <TextBlock Margin="10" Grid.Row="2" Grid.Column="0">New Name:</TextBlock>
-                <TextBox Margin="10" Name="txtNewName" Grid.Row="2" Grid.Column="1"
+        Title="Rename Item" Height="250" Width="410" ResizeMode="NoResize">
+    <Grid Background="LightBlue">
+        <Grid.Resources>
+            <ResourceDictionary Source="..\Themes\Generic.xaml"/>
+        </Grid.Resources>
+        <Grid Margin="20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="260"/>
+                <ColumnDefinition Width="10"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel>
+                <TextBlock TextWrapping="Wrap">In order to rename the selected item, please enter the new name to give it.</TextBlock>
+                <Grid Margin="0, 20, 0, 20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Margin="10" Grid.Row="0" Grid.Column="0">Path:</TextBlock>
+                    <TextBox Margin="10" Name="txtPath" Grid.Row="0" Grid.Column="1" IsReadOnly="True"
+                     Text="{Binding Path=ItemPath, Mode=TwoWay}"/>
+                    <TextBlock Margin="10" Grid.Row="1" Grid.Column="0">Old Name:</TextBlock>
+                    <TextBox Margin="10" Name="txtOldName" Grid.Row="1" Grid.Column="1" IsReadOnly="True"
+                     Text="{Binding Path=ItemOldName, Mode=TwoWay}"/>
+                    <TextBlock Margin="10" Grid.Row="2" Grid.Column="0">New Name:</TextBlock>
+                    <TextBox Margin="10" Name="txtNewName" Grid.Row="2" Grid.Column="1"
                      Text="{Binding Path=ItemNewName, Mode=TwoWay}"/>
-            </Grid>
-        </StackPanel>
-        <StackPanel Grid.Column="2">
-            <Button Name="btnOkay" Content="Okay" Background="LightBlue" HorizontalAlignment="Stretch" Padding="5"
+                </Grid>
+            </StackPanel>
+            <StackPanel Grid.Column="2">
+                <Button Name="btnOkay" Content="Okay" HorizontalAlignment="Stretch" Padding="5"
                 Click="btnOkay_Click"/>
-            <Button Name="btnCancel" Content="Cancel" Background="LightBlue" HorizontalAlignment="Stretch" Padding="5"
+                <Button Name="btnCancel" Content="Cancel" HorizontalAlignment="Stretch" Padding="5"
                 Click="btnCancel_Click" Margin="0, 10, 0, 0"/>
 
-        </StackPanel>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
